Fix other column headers from bleeding under a sticky column header

--- a/public/css/datatable.scss
+++ b/public/css/datatable.scss
@@ -54,6 +54,10 @@ table.table {
 		}
 	}
 
+	.sorting {
+		background-color: $white !important;
+	}
+
 	.sorting_highlight {
 		background-color: $sorting-highlight-bg !important;
 	}
